--- a/templates/pico/instance_flavors.yaml
+++ b/templates/pico/instance_flavors.yaml
@@ -1,8 +1,11 @@
+# instance_flavors.yaml contains the default instance type for each
+# PNDA instance type
 parameter_defaults:
   Manager1Flavor: pico-mgr
   EdgeFlavor: pico-edge
   KafkaFlavor: pico-kafka
   DatanodeFlavor: pico-dn
-  BastionFlavor: pnda-micro
+  BastionFlavor: pico-bastion
+  SaltmasterFlavor: pico-saltmaster
   DatanodeVolumeSize: 35
   PndaFlavor: pico
