--- a/templates/standard/mgr1.yaml
+++ b/templates/standard/mgr1.yaml
@@ -1,3 +1,7 @@
+# Definition for the mgr1 instance type
+# Specifies which bootstrap script to run to set up this instance type and which roles
+# to apply to this instance type
+
 heat_template_version: 2014-10-16
 
 parameters:
@@ -29,15 +33,13 @@ parameters:
     default: standard
   logvolume_size:
     type: number
-    default: 250
-  log_mountpoint:
-    type: string
-    default: /dev/vdb
+    default: 120
   signal_transport:
     type: string
   software_config_transport:
     type: string
-
+  scheduler_group_hint:
+    type: string
 
 resources:
   sec_group:
@@ -71,7 +73,7 @@ resources:
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
             $flavor$: { get_param: pnda_flavor }
-            $volume_dev$: { get_param: log_mountpoint }
+            $log_volume_id$: { get_resource: logvolume }
             $roles$: 'cloudera_namenode,mysql_connector'
             $cloudera_role$: 'MGR01'
   install_deployment:
@@ -95,7 +97,6 @@ resources:
     properties:
       volume_id: { get_resource: logvolume }
       instance_uuid: { get_resource: server }
-      mountpoint: { get_param: log_mountpoint }
 
 
   server:
@@ -110,6 +111,8 @@ resources:
       software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
       config_drive: True
+      scheduler_hints: 
+        group: { get_param: scheduler_group_hint}
 
 outputs:
   server_resource:
