--- a/templates/standard/bastion.yaml
+++ b/templates/standard/bastion.yaml
@@ -1,7 +1,7 @@
 # Definition for the bastion instance type
 # Specifies which bootstrap script to run to set up this instance type
 
-heat_template_version: 2014-10-16
+heat_template_version: 2015-04-30
 
 parameters:
   Flavor:
@@ -39,6 +39,18 @@ parameters:
     type: string
   software_config_transport:
     type: string
+  PndaMirror:
+    description: URL of a mirror for operating system package download
+    type: string
+    default: ''
+  os_user:
+    type: string
+  specific_config:
+    description: "Warning: Specific configuration that will be passed to bash scripts as associative array"
+    type: string
+    default: ''
+  package_config:
+    type: string
 
 resources:
   sec_group:
@@ -72,6 +84,17 @@ resources:
       floating_network_id: { get_param: PublicNet }
       port_id: { get_resource: port}
 
+  deploy_package:
+    type: OS::Heat::SoftwareDeployment
+    properties:
+      signal_transport: { get_param: signal_transport }
+      config:
+        get_param: package_config
+      server:
+        get_resource: server
+      actions:
+        - CREATE
+
   install_config:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -80,15 +103,17 @@ resources:
         str_replace:
           template: {get_file: scripts/base_install.sh }
           params:
+            $pnda_mirror$: { get_param: PndaMirror }
             $flavor$: { get_param: pnda_flavor }
             $roles$: 'bastion'
             $master_ip$: { get_param: SaltmasterIP }
             $keyname$: { get_param: 'OS::stack_name' }
             $private_key$: { get_param: private_key }
             $pnda_cluster$: { get_param: cluster_name }
+            $$SPECIFIC_CONF$$: { get_param: specific_config }
   install_deployment:
     type: OS::Heat::SoftwareDeployment
-    depends_on: bastion_deployment
+    depends_on: [ bastion_deployment, deploy_package ]
     properties:
       signal_transport: { get_param: signal_transport }
       config:
@@ -106,6 +131,8 @@ resources:
           params:
             $private_key$: { get_param: private_key }
             $keyname$: { get_param: 'OS::stack_name' }
+            $os_user$: { get_param: os_user }
+            $$SPECIFIC_CONF$$: { get_param: specific_config }
   bastion_deployment:
     type: OS::Heat::SoftwareDeployment
     properties:
