--- a/templates/standard/pnda.yaml
+++ b/templates/standard/pnda.yaml
@@ -96,9 +96,13 @@ parameters:
   software_config_transport:
     type: string
     default: POLL_TEMP_URL
-
+  specific_config:
+    description: "Warning: Specific configuration that will be passed to bash scripts as associative array"
+    type: string
+    default: ''
 
 resources:
+
   pnda_cluster:
     type: OS::Pnda::cluster
     depends_on: [ router_interface, deploy_install, saltmaster_server ]
@@ -136,6 +140,9 @@ resources:
       DatanodeVolumeSize : { get_param: DatanodeVolumeSize }
       signal_transport: { get_param: signal_transport }
       software_config_transport: { get_param: software_config_transport }
+      pre_config: {get_resource: pre_config}
+      specific_config: { get_param: specific_config }
+      package_config: {get_resource: package_config}
 
   saltmaster_server:
     type: OS::Nova::Server
@@ -153,4 +160,5 @@ resources:
             '%stackname%': {get_param: 'OS::stack_name'}
       software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
+      user_data: { get_resource: pre_config }
       config_drive: True
