--- a/templates/pnda.yaml
+++ b/templates/pnda.yaml
@@ -108,7 +108,8 @@ parameters:
     type: string
   pnda_archive_container:
     type: string
-
+  hadoop_distro:
+    type: string
   DeploymentID:
     type: string
     default: ''
@@ -141,6 +142,9 @@ parameters:
     description: "Warning: Specific configuration that will be passed to bash scripts as associative array"
     type: string
     default: ''
+  mine_functions_network_ip_addrs_nic:
+    description: "Salt master specific configuration on network"
+    type: string
 
 resources:
   # A keypair is created for this stack and used to secure login for all instances
@@ -294,7 +298,9 @@ resources:
             $pnda_apps_container$: { get_param: pnda_apps_container }
             $pnda_apps_folder$: { get_param: pnda_apps_folder }
             $pnda_archive_container$: { get_param: pnda_archive_container }
+            $hadoop_distro$: { get_param: hadoop_distro }
             $$SPECIFIC_CONF$$: { get_param: specific_config }
+            $mine_functions_network_ip_addrs_nic$: { get_param: mine_functions_network_ip_addrs_nic}
 
   deploy_package:
     type: OS::Heat::SoftwareDeployment
@@ -332,7 +338,7 @@ resources:
         #!/bin/bash -v
         set -e
         set -o pipefail
-        salt -v --log-level=debug --timeout=120 --state-output=mixed '*' state.highstate | tee salt-highstate-$(date +"%F-%T").log
+        salt -v --log-level=debug --timeout=120 --state-output=mixed '*' state.highstate queue=True | tee salt-highstate-$(date +"%F-%T").log
   deploy_highstate:
         type: OS::Heat::SoftwareDeployment
         depends_on: [deploy_install,pnda_cluster]
@@ -392,7 +398,8 @@ resources:
             #!/bin/bash -v
             set -e
             set -o pipefail
-            salt -v --log-level=debug --timeout=120 --state-output=mixed '*' state.highstate | tee salt-highstate-$(date +"%F-%T").log
+            salt -v --log-level=debug --timeout=120 --state-output=mixed '*' state.sls hostsfile queue=True | tee salt-highstate-$(date +"%F-%T").log
+            salt -v --log-level=debug --timeout=120 --state-output=mixed -C "G@pnda:is_new_node" state.highstate queue=True| tee salt-highstate-$(date +"%F-%T").log
             CLUSTER=cname salt-run --log-level=debug state.orchestrate orchestrate.pnda-expand | tee salt-expand-$(date +"%F-%T").log
           params:
             cname: { get_param: 'OS::stack_name' }
