--- a/templates/pnda.yaml
+++ b/templates/pnda.yaml
@@ -145,6 +145,14 @@ parameters:
   pnda_internal_network:
     type: string
     default: ''
+  compaction:
+    description: "Enable/Disable compaction on datasets"
+    type: string
+    default: ''
+  pattern:
+    description: "If compaction is enabled, pattern sets the frequency of compaction"
+    type: string
+    default: ''
 
 resources:
   # A keypair is created for this stack and used to secure login for all instances
@@ -301,6 +309,8 @@ resources:
             $hadoop_distro$: { get_param: hadoop_distro }
             $$SPECIFIC_CONF$$: { get_param: specific_config }
             $pnda_internal_network$: { get_param: pnda_internal_network }
+            $compaction$: { get_param: compaction }
+            $pattern$: { get_param: pattern }
 
   deploy_package:
     type: OS::Heat::SoftwareDeployment
